# sc-penguins-cpp

./: .gitignore  ACKNOLEDGEMENTS.md  ACKNOWLEDGEMENTS.md  CMakeLists.txt  LICENSE  README.md  includelist.cmake  sourcelist.cmake  starter.cpp
extensions/logic/: logic.cpp
include/client/: client.h
include/communication/: message_handler.h  tcp_connection.h  xml_string_writer.h
include/game/: board.h  field.h  gameState.h  move.h  result.h  team.h
include/game/util/: coordinates.h
include/logic/: logic.h
python_starter/: CMakeLists.txt  custom_logic.py  starter.py  swig.i
python_wrapper/: CMakeLists.txt  wrapper.cpp
sc_library/: CMakeLists.txt  README.md  sourcelist.cmake
sc_library/include/client/: client.h
sc_library/include/communication/: message_handler.h  xml_string_writer.h
sc_library/include/game/: board.h  gameState.h  move.h  result.h
sc_library/include/game/util/: coordinates.h
sc_library/include/helpers/: game_helpers.h
sc_library/include/logic/: logic.h
sc_library/src/client/: client.cpp
sc_library/src/communication/: SC_Message.cpp  message_handler.cpp  tcp_connection.cpp  xml_string_writer.cpp
sc_library/src/game/: board.cpp  coordinates.cpp  gameState.cpp  move.cpp  result.cpp
sc_library/src/logic/: logic.cpp
src/client/: client.cpp
src/communication/: message_handler.cpp  tcp_connection.cpp
src/game/: board.cpp  coordinates.cpp  move.cpp  result.cpp
starter/: CMakeLists.txt  custom_logic.cpp  starter.cpp
