project (SC_2022_PYTHON)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(swig.i PROPERTIES CPLUSPLUS ON)

SWIG_ADD_LIBRARY(SC_2022_PY LANGUAGE python SOURCES swig.i)

SWIG_LINK_LIBRARIES(SC_2022_PY ${PYTHON_LIBRARIES})
SWIG_LINK_LIBRARIES(SC_2022_PY SC)